test/Fail/Issue5029-2.err
Issue5029-2.agda:8.1-21: error: [SafeFlagNoCoverageCheck]
Cannot use NON_COVERING pragma with safe flag.
